Visual oracle: Statusstand vor Neustart, offene Branches und Blocker